# scormbuilder

./: .gitignore  ACTUALIZACION_OTRA_AULA.md  DESPLIEGUE.md  INSTALAR.md  LEEME_PRIMERO.txt  MEJORAS_v0.2.md  MEJORAS_v0.3.md  MEJORAS_v0.4.1.md  MEJORAS_v0.4.2.md  MEJORAS_v0.4.3.md  MEJORAS_v0.4.md  MEJORAS_v0.5.md  MEJORAS_v0.5_fase2.md  MEJORAS_v0.5_fase3.md  MEJORAS_v0.5_fase4.md  MEJORAS_v0.5_fase5.md  README.md  demo-editor-fase5.html
docs/: 01_vision_producto.md  02_convencion_docx.md  03_guia_instalacion.md  04_roadmap_saas.md
instalador/: app_local.py  instalar.sh
libreria/: pyproject.toml
libreria/scorm_builder/: __init__.py  ai_assist.py  aiken_builder.py  api.py  cli.py  exporters.py  inline.py  packager.py  parser.py  pdf_builder.py  renderer.py  subtitles.py  template_builder.py  themes.py  tts.py  wcag.py
libreria/tests/: test_v05_1_enrich_all.py  test_v05_phase1.py  test_v05_phase2.py  test_v05_phase3_ui.py  test_v05_phase4_ui.py  test_v05_phase5.py
plantilla/: Plantilla_Curso_SCORM.docx  Plantilla_Curso_SCORM_v5.docx  generar_plantilla.py  generar_test_v05.py  test_v05.docx
