[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scorm-builder"
version = "0.4.1"
description = "Convierte DOCX en cursos SCORM multimedia con asistente IA, accesibilidad WCAG, modo constructor visual y exports multi-formato"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Tu Nombre", email = "tu@email.com"}
]
keywords = ["scorm", "elearning", "docx", "fundae", "lms", "moodle"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "python-docx>=1.1.0",
    "reportlab>=4.0.0",
    "jinja2>=3.1.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "playwright>=1.40.0",
]
ai = [
    "anthropic>=0.25.0",
]

[project.scripts]
scorm-builder = "scorm_builder.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
scorm_builder = ["templates/*.html", "templates/*.css", "templates/*.js", "assets/*"]
